--- a/themes/blue/css/screen.css
+++ b/themes/blue/css/screen.css
@@ -5,12 +5,12 @@ h1, h2, h3, h4, h5, h6 {
 body {
     color: #333;
     background-color: #f2f2f2;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 16px;
+    font-family:  serif;
+    font-size: 1.5em;
 }
 
 .container {
-    max-width: 1000px;
+//    max-width: 1000px;
 }
 
 .right {
